--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -1,14 +1,86 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/style.css">
-  <title>Flower App in Backbone</title>
+    <meta charset="UTF-8">
+    <title>Gradient</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.css">
+
 </head>
 <body>
-    
-    
+<section class="header">
+    <ul class="menu">
+        <li class="logo" style="float: left"><img src="img/logo.png" style="width: 324px; height: 68px;"></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Team</a></li>
+        <li><a href="#">Portfolio</a></li>
+        <li><a href="#">Topics</a></li>
+        <li><a href="#">Home</a></li>
+		<li class="icon">
+    <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
+  </li>
+    </ul>
+</section>
+<section class="home">
+<div>
+    <h1>THIS IS SALIENT</h1>
+	<br>
+    <p>This year the brightest web designers and front-end developers meet</p>
+	<br>
+	<div class="buttons">
+    <button class="leftButton">VIEW OUR WORK</button><button class="rightButton">LEARN ABOUT US</button>
+	</div>
+</div>
+</section>
+
+
+<section class="topics">
+    <div class="topic">
+		<table>
+			<tr>
+				<td><span class="fa fa-anchor"></span></td>
+				<td><h4>Responsive Design</h4></td>
+			</tr>	
+			<tr>
+				<td></td>
+				<td><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc metus orci, venenatis sit amet fermentum ut, scelerisque nec nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc metus orci, venenatis sit amet fermentum ut, scelerisque nec nisi.</p></td>
+			</tr>
+		</table>    
+	</div>
+
+    <div class="topic">
+		<table>
+			<tr>
+				<td><span class="fa fa-anchor"></span></td>
+				<td><h4>Responsive Design</h4></td>
+			</tr>	
+			<tr>
+				<td></td>
+				<td><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc metus orci, venenatis sit amet fermentum ut, scelerisque nec nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc metus orci, venenatis sit amet fermentum ut, scelerisque nec nisi.</p></td>
+			</tr>
+		</table>    
+	</div>
+
+    <div class="topic">
+		<table>
+			<tr>
+				<td><span class="fa fa-anchor"></span></td>
+				<td><h4>Responsive Design</h4></td>
+			</tr>	
+			<tr>
+				<td></td>
+				<td><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc metus orci, venenatis sit amet fermentum ut, scelerisque nec nisi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc metus orci, venenatis sit amet fermentum ut, scelerisque nec nisi.</p></td>
+			</tr>
+		</table>    
+	</div>
+
+</section>
+<section class="footer">
+   <p> Copyright &copy; 2016 Sanja Risteska</p>
+</section>
+
+
+<script src="js/jquery.js"></script>
+<script src="js/myScript.js"></script>
 </body>
 </html>
