--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -80,7 +80,8 @@
 </section>
 
 
-<script src="js/jquery.js"></script>
-<script src="js/myScript.js"></script>
+<script src="js/libs/jquery.js"></script>
+<script src="js/libs/underscore.js"></script>
+<script src="js/libs/backbone.js"></script>
 </body>
 </html>
