--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -10,11 +10,7 @@
 <section class="header">
     <ul class="menu">
         <li class="logo" style="float: left"><img src="img/logo.png" style="width: 324px; height: 68px;"></li>
-        <li><a href="#">Contact</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Topics</a></li>
-        <li><a href="#">Home</a></li>
+        <li><a href="#">My cart</a></li>
 		<li class="icon">
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
