--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -9,8 +9,8 @@
 <body>
 <section class="header">
     <ul class="menu">
-        <li class="logo" style="float: left"><img src="img/logo.png" style="width: 324px; height: 68px;"></li>
-        <li><a href="#">My cart</a></li>
+        <li class="logo" style="float: left"><img id="cartIcon" src="img/logo.png" style="width: 324px; height: 68px;"></li>
+        <li><a href="#"><img id="cartIcon" src="img/cart.png">My cart</a></li>
 		<li class="icon">
     <a href="javascript:void(0);" onclick="myFunction()">&#9776;</a>
   </li>
