phone model and load scripts in index.html

--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>Gradient</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
-
 </head>
 <body>
 <section class="header">
@@ -78,5 +77,13 @@
 <script src="js/libs/jquery.js"></script>
 <script src="js/libs/underscore.js"></script>
 <script src="js/libs/backbone.js"></script>
+    
+<script src="js/models/SinglePhoneModel.js"></script> 
+<script src="js/views/SinglePhoneView.js"></script> 
+<script src="js/views/AllPhonesView.js"></script> 
+<script src="js/collections/AllPhonesCollection.js"></script> 
+<script src="js/main/PhoneStoreApp.js"></script>
+<script src="js/routers/Router.js"></script> 
+
 </body>
 </html>
