read phonesData.json and create a collection

--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -78,6 +78,8 @@
 <script src="js/libs/underscore.js"></script>
 <script src="js/libs/backbone.js"></script>
     
+<script type="text/javascript" src="resource/phonesData.js"></script>
+    
 <script src="js/models/SinglePhoneModel.js"></script> 
 <script src="js/views/SinglePhoneView.js"></script> 
 <script src="js/views/AllPhonesView.js"></script> 
