--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -40,7 +40,7 @@
 
     </section>
     <section class="footer">
-       <p> Copyright &copy; 2016 Sanja Risteska</p>
+       <p> Copyright &copy; 2017 Seavus</p>
     </section>
 
 
