phone preview changes

--- a/BackboneApp/index.html
+++ b/BackboneApp/index.html
@@ -33,6 +33,7 @@
         
          <script id="phonePreview" type="text/template">
               <div id="phone-preview">
+              <img src="<%= img %>" alt="<%= model %>" class="image"/>
                 <ul>
                     <li class="phoneInfo"><strong>Manufacturer:</strong> <%= manufacturer %></li>
                     <li class="phoneInfo"><strong>Model:</strong> <%= model %></li>
